fix: fixed html, css and js

--- a/css/index.css
+++ b/css/index.css
@@ -124,3 +124,11 @@ footer {
         grid-column: span 2;
     }
 }
+
+.weatherZone {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    height: 100%;
+}
